Fixes after review